--- a/docs/usage/commands.mdx
+++ b/docs/usage/commands.mdx
@@ -27,6 +27,8 @@ as modules with `Ctrl + a`.
 You can also mark your Python [source roots](configuration#source-roots) by pressing `s`.
 This allows Tach to understand module paths and correctly identify first-party imports.
 
+You can mark modules as [utilities](configuration#modules) by pressing `u`. This is appropriate for modules like `utils/`, which can be freely used by the rest of the code.
+
 To save your modules, use `Ctrl + s`. Otherwise, to exit without saving, use `Ctrl + c`.
 
 Any time you make changes with `tach mod`, run [`tach sync`](commands#tach-sync)
