--- a/docs/getting-started/why-tach.mdx
+++ b/docs/getting-started/why-tach.mdx
@@ -25,4 +25,4 @@ With Tach, you can:
 3. Enforce those dependencies ([`tach check`](../usage/commands#tach-check))
 4. Visualize those dependencies ([`tach show`](../usage/commands#tach-show) and [`tach report`](../usage/commands#tach-report))
 
-You can also enforce a [strict interface](../usage/strict-mode) for each module, and [deprecate dependencies](../usage/deprecate) over time. This means that only members that are listed in `__all__` can be imported by other modules.
+You can also enforce a [public interface](../usage/interfaces) for each module, and [deprecate dependencies](../usage/deprecate) over time. This means that only members that are listed in `__all__` can be imported by other modules.
