--- a/docs/getting-started/introduction.mdx
+++ b/docs/getting-started/introduction.mdx
@@ -11,7 +11,7 @@ This creates a modular architecture, which makes development easier.
 
 If a module tries to import from another module that is not listed as a dependency, Tach will report an error.
 
-When a module is marked ['strict'](../usage/strict-mode), if another module tries to import from it without using its public interface, Tach will report an error.
+When a module has a [public interface](../usage/interfaces), any import which does not go through the public interface will cause Tach to report an error.
 
 Dependencies can be additionally marked as ['deprecated'](../usage/deprecate). Tach will not report an error but will surface usages of the deprecated dependency.
 
@@ -28,7 +28,7 @@ Tach is:
 ## Commands
 
 - [`tach mod`](../usage/commands#tach-mod) - Interactively define module boundaries.
-- [`tach check`](../usage/commands#tach-check) - Check that boundaries are respected.
+- [`tach check`](../usage/commands#tach-check) - Check that boundaries and interfaces are respected.
 - [`tach sync`](../usage/commands#tach-sync) - Sync constraints with the actual dependencies in your project.
 - [`tach show`](../usage/commands#tach-show) - Visualize your project's dependency graph.
 - [`tach report`](../usage/commands#tach-report) - Generate a dependency report for a file or module.
