Add args to check from CLI through extension

--- a/docs/getting-started/getting-started.mdx
+++ b/docs/getting-started/getting-started.mdx
@@ -52,7 +52,7 @@ tach check
 You will see:
 
 ```bash
-✅ All module dependencies validated!
+✅ All modules validated!
 ```
 
 You can validate that Tach is working by either:
