--- a/docs/usage/deprecate.mdx
+++ b/docs/usage/deprecate.mdx
@@ -32,7 +32,7 @@ get_data()
 This import won't fail `tach check`, instead you'll see:
 ```shell
 ‼️ parsing.py[L1]: Import 'core.get_data' is deprecated. 'parsing' should not depend on 'core'.
-✅ All module dependencies validated!
+✅ All modules validated!
 ```
 
 Note that we still see that all module dependencies are valid! To fail on the dependency, simply remove it from the `depends_on` key.
