--- a/docs/usage/configuration.mdx
+++ b/docs/usage/configuration.mdx
@@ -103,6 +103,12 @@ unused_ignore_directives = "warn"
 Each module listed under the `modules` key above can accept the following attributes:
 
 - `path`: the Python import path to the module (e.g. `a.b` for `<root>/a/b.py`)
+<Note>
+  A module can also define `paths` as a shorthand for multiple module definitions.
+  This allows specifying allowed dependencies and other attributes as a group.
+
+  Example: `paths = ["a.b", "a.c"]`
+</Note>
 - `depends_on`: a list of the other modules which this module can import from (default: `[]`)
 - `visibility`: a list of other modules which can import from this module (default: `['*']`)
 - `utility`: marks this module as a **Utility**, meaning all other modules may import from it without declaring an explicit dependency (boolean)
