Fix typo in docs

--- a/docs/usage/configuration.mdx
+++ b/docs/usage/configuration.mdx
@@ -8,7 +8,7 @@ Aside from running `tach mod` and `tach sync`, you can configure Tach by creatin
 
 This is the project-level configuration file which should be in the root of your project.
 
-`modules` defines the modules in your project - [see detais](#modules).
+`modules` defines the modules in your project - [see details](#modules).
 
 `interfaces` defines the interfaces of modules in your project - [see details](#interfaces).
 
