--- a/docs/usage/configuration.mdx
+++ b/docs/usage/configuration.mdx
@@ -28,7 +28,10 @@ This is the project-level configuration file which should be in the root of your
 
 `rules` allows precise configuration of the severity of certain types of issues. See [below](#rules) for more details.
 
-`use_regex_matching` (default: **true**) is a flag which controls how exclude patterns are interpreted. When `false`, exclude patterns are interpreted as globs.
+**[DEPRECATED]** `use_regex_matching` (default: **false**) is a flag which controls how exclude patterns are interpreted.
+By default, exclude patterns are interpreted as globs. But when this flag is `true`, exclude patterns are interpreted as regex.
+
+<Warning>The `use_regex_matching` configuration option will be removed in a future version of Tach. If you have already customized your `exclude` list, it is likely that you will need to update your patterns to globs.</Warning>
 
 ```toml
 exclude = [
