--- a/docs/usage/interfaces.mdx
+++ b/docs/usage/interfaces.mdx
@@ -17,7 +17,7 @@ Given modules called 'core' and 'domain', we may have `tach.toml` contents like 
 [[modules]]
 path = "domain"
 depends_on = [
-    { path = "core" }
+    "core"
 ]
 
 [[modules]]
