Clarification on diff between unchecked and depends_on omitted

--- a/docs/usage/unchecked-modules.mdx
+++ b/docs/usage/unchecked-modules.mdx
@@ -12,6 +12,14 @@ An **unchecked** module should be thought of as a 'known' module which does not 
 
 The purpose of configuring an unchecked module is to better support **incremental adoption** of Tach.
 
+<Note>
+Setting `unchecked: true` is different from omitting the `depends_on` field.
+
+An unchecked module is allowed to import anything, from any module - even when the module declares a [public interface](configuration#interfaces).
+
+In contrast, a module with `depends_on` omitted will still need to respect public interfaces.
+</Note>
+
 ## Example
 
 Suppose you are adding Tach to an existing project, and you want to start by restricting dependencies for only one part of the codebase.
