--- a/docs/usage/configuration.mdx
+++ b/docs/usage/configuration.mdx
@@ -299,7 +299,7 @@ If it seems useful, we'd love to hear your feedback! E-mail us at founders@gauge
 Tach allows splitting your configuration into 'domains', or sub-folders of your project.
 You can define modules and interfaces in a `tach.domain.toml` file which lives right next to the module code itself.
 
-This is useful to allow multiple developers or teams to independently own and maintain their modules and interfaces.
+This enables multiple developers or teams to independently own and maintain their modules and interfaces.
 
 ### Modules
 
